<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="10dp"
    tools:context=".editModule.HomeFragment">

    <TextView
        android:id="@+id/tvTitleHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_home"
        android:textColor="@color/color1"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/rvSongs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSongs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleHome"
        tools:itemCount="4"
        tools:listitem="@layout/item_song" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_labelsPosition="left"
        app:fab_labelStyle="@style/labelStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddSong"
            app:fab_icon="@drawable/ic_song"
            app:fab_title="@string/title_add_song"
            app:fab_colorNormal="#90d"
            app:fab_colorPressed="#60d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddGender"
            app:fab_icon="@drawable/ic_gender"
            app:fab_title="@string/title_add_gender"
            app:fab_colorNormal="#90d"
            app:fab_colorPressed="#60d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </com.getbase.floatingactionbutton.FloatingActionsMenu>
</androidx.constraintlayout.widget.ConstraintLayout>





