<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:background="@color/black"
    tools:context=".editModule.GenderFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitleNewPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_add_gender"
                android:textColor="@color/color1"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilGenderType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_default"
                android:hint="@string/type"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toTopOf="@+id/tilGenderDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleNewPhone"
                app:startIconDrawable="@drawable/ic_gender"
                app:hintTextColor="@color/color1"
                app:startIconTint="@color/color1"
                app:endIconTint="@color/color1"
                android:textColorHint="@color/color1"
                app:boxBackgroundColor="@color/bg_field"
                app:boxCornerRadiusTopEnd="@dimen/common_padding_min"
                app:boxCornerRadiusBottomStart="@dimen/common_padding_min"
                app:boxCornerRadiusTopStart="@dimen/common_padding_min"
                app:boxCornerRadiusBottomEnd="@dimen/common_padding_min"
                app:boxStrokeColor="@color/color1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtGenderType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/color1"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilGenderDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_min"
                android:hint="@string/description"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toTopOf="@+id/lnColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilGenderType"
                app:startIconDrawable="@drawable/ic_text"
                app:hintTextColor="@color/color1"
                app:startIconTint="@color/color1"
                app:endIconTint="@color/color1"
                android:textColorHint="@color/color1"
                app:boxBackgroundColor="@color/bg_field"
                app:boxCornerRadiusTopEnd="@dimen/common_padding_min"
                app:boxCornerRadiusBottomStart="@dimen/common_padding_min"
                app:boxCornerRadiusTopStart="@dimen/common_padding_min"
                app:boxCornerRadiusBottomEnd="@dimen/common_padding_min"
                app:boxStrokeColor="@color/color1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtGenderDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/color1"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/lnColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/common_padding_default"
                app:layout_constraintTop_toBottomOf="@+id/tilGenderDescription"
                app:layout_constraintBottom_toTopOf="@+id/btnSaveGender"
                app:layout_constraintStart_toStartOf="parent">
                <TextView
                    android:id="@+id/tvPick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pick a Color:"
                    android:textSize="18sp"
                    android:textColor="@color/color1"
                    />
                <ImageButton
                    android:id="@+id/btnPickColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_color"
                    app:tint="@color/color1"
                    android:layout_marginStart="@dimen/common_padding_default"
                    />
            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSaveGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_gender"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="20dp"
                android:backgroundTint="@color/bg_button"
                app:layout_constraintTop_toBottomOf="@+id/lnColor" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

